Handle network process crashes in WebRTC.

While existing connections are lost, we should be able to start new ones from a renderer that experienced a network process crash.

Bug: 891927
Change-Id: I2a3f997274b1b22cfd0b6a9b5ff7e5a824dab64a
Reviewed-on: https://chromium-review.googlesource.com/c/1260363
Reviewed-by: Sergey Ulanov <sergeyu@chromium.org>
Commit-Queue: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596806}
Former-commit-id: 16f8cecbeeed01a1adf99c9ad2ee7a9c42144c9c