content/browser/webrtc/webrtc_browsertest.cc
@@ -18,6 +18,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "media/base/media_switches.h"
 #include "media/media_buildflags.h"
 #include "net/test/embedded_test_server/embedded_test_server.h"
+#include "services/network/public/cpp/features.h"
 
 namespace content {
 
@@ -56,6 +57,14 @@ class MAYBE_WebRtcBrowserTest : public WebRtcContentBrowserTestBase {
 };
 
 IN_PROC_BROWSER_TEST_F(MAYBE_WebRtcBrowserTest, CanSetupAudioAndVideoCall) {
+  MakeTypicalPeerConnectionCall("call({video: true, audio: true});");
+}
+
+IN_PROC_BROWSER_TEST_F(MAYBE_WebRtcBrowserTest, NetworkProcessCrashRecovery) {
+  if (!base::FeatureList::IsEnabled(network::features::kNetworkService))
+    return;
+  MakeTypicalPeerConnectionCall("call({video: true, audio: true});");
+  SimulateNetworkServiceCrash();
   MakeTypicalPeerConnectionCall("call({video: true, audio: true});");
 }
 
